--- a/market.tex
+++ b/market.tex
@@ -3,6 +3,8 @@
 
 Consider a setting with multiple experts providing advice to a subject, who wishes to incentivize them to inform them of which of a set of available actions maximize the reward.
 One natural way to attempt to do is by applying the machinery of prediction markets based on sequentially shared proper scoring rules, and only settlign the markets where actions are taken. Doing this in an incentive compatible manner for the experts is however incompatible with maintaining the subjects freedom to select the action that appears optimal ex-post (\cite{othman2010decision,  chen2014eliciting}, that is using the max decision rule. 
+
+%TODO: garrett says more clear explanation. make explicit pointer to background section, and make paragraph of sentence.
 The core of the problem with using the machinery of prediction markets in the decision setting is that at the point where the mechanism has correct belief over the optimal action but not others, a expert  can profit by changing expected rewards to make optimal action appear worse than an action for which the expected reward can be corrected.
 
 
@@ -13,10 +15,18 @@ We then analyze a simple bid based variation of the mechansim, and provide a suf
 
 \section{Model}
 
-We consider a single subject with access to $K$ possible choices, and access to a set of $N$ experts, each of whom have access to some signal $s_i$ which are potentially informative about $\expec[r|a,c,S]$, where use $S$ to denote the vector containing all experts signals.  $P$ denotes the apriori joint probability distribution over $(r,a,c,S) $ which is common knowledge. 
+
+% define a and c and r beforehand, pointer to notation section
+As before $c$ is the action chosen by the mechanism, $a$ is the action that the subjec actually carries out, and $r$ is the reward received by the subject. An expert $i$ receives signal $s_i$, and we denote by $S$ the set of all experts signals.
+We consider a single subject with access to $K$ possible choices, and access to  $N$ experts, each of whom have access to some signal $s_i$ which are potentially informative about $\expec[r|a,c,S]$. The set of possible signals and actions are both finite.
+We use $P$ to denote the apriori joint probability distribution over $(r,a,c,S) $ which is common knowledge unless we explicitly state otherwise.  
+
+When denoting the expectation $\expec[r|a]$
 
 Thus given a mechanism $M$, and denoting unobservable characteristics (the latent state) as $u$
 
+
+%include probability mass sumation here
 
 %\begin{figure*}[t]
 %	\centering	
@@ -33,8 +43,11 @@ The subject observes the action chosen by the mechanism $c$, and takes a (potent
 
 An experts $i$ report is truthful when $\hat{s}_i=s_i$. A mechanism is incentive compatible when truthful reports maximize the payment experts receive and this holds for all experts. This can be in dominant strategies or in a bayesian nash equilibrium.  We seek efficient mechanisms, that is $c^{*} = \hat{c}$ for all posible signals.
 
+
+
 \section{Simple Mechanisms and Fundamental Limits}
 
+%motivate why this example.
 Consider the following adaptation of the classic complemetary knowledge example from the full supervised setting, which originates in \cite{geanakoplos1982we}, to the bandit setting:
 
 \begin{eg}[complementary experts]\label{eg:comp-ex}
@@ -56,8 +69,10 @@ Thus, there is a fundamental limit to the information that can be aggregated by 
 % 􏰥 􏰦 ω′∈Πi(ω)
 % ω′ ∈Πi (ω)
 % ￼Otherwise, security X is separable.
+
 \subsection{A Simple Direct Reward Sharing Mechanism}
 
+%structure, mechanism , advantages, disadvantages, maybe a list. deinfe first discuss later
 
 Let us first consider a very basic direct mechanism, which will help us understand the model and the limitations that subjects freedom imposes. 
 
@@ -72,9 +87,13 @@ We say a expert is useless if knowing their signal would not change the chosen a
 This mechanism is problematic in a pair of related ways: it pays out even when experts signals are useless.
 A corrolary of this is that the entry of useless experts reduces the payment received by valuable ones or the budget needed by the mechanism.
 
+%arg max c*
+
 
 
 \subsection{Scoring Rule and Void Decision Market Mechanisms}
+
+%not clear; the literature is way too specific, make the two different problems the mechanism has clearer
 
 A somewhat more complicated mechanism is to attempt to use the machine of sequential proper scoring rule based market makers to predict the rewards contigent on choosing each possible action. The market for the chosen action can then be settled in the standard manner, and the other markets voided. 
 We term these Scoring-rule and Void Decision Market Mechanisms (SVDM). The basic idea is to use a sequentially shared proper socring rule to run a prediction market for the value of the reward conditional each possible action, and to void the markets for the non-chosen actions.  
@@ -96,9 +115,14 @@ Beyond the reduction in freedom fromthe pre-commitment to randomiation with full
 
 A further limitation of such methods is inherited from the prediction markets and more generally from posterior anoucement games analized in \cite{ostrovsky2012information}: fully complemetary signals between two experts are not aggregated. 
 
+
+
 \section{A Direct Mechanism for Efficient Optimal Choice Elicitation}
 
-We now consider a VCG style mechanism for the optimal decision elicitation problem. The sense in which it is VCG is that it is efficient (always chooses the action whose choice maximizes rewards, note this can be different form the actual action which if carried out with perfect compliance would do so) and we compensate subjects for the extenrality their signal imposes; since truthful reports cannot by definitiion lower the expected value of the optimal action relative to having chosen the action without using the extra signal, these are strictly positive when all reports are truthful. 
+
+We now consider a VCG style mechanism for the optimal decision elicitation problem. 
+%Edit the longass thing into coherent.
+The sense in which it is VCG is that it is efficient (always chooses the action whose choice maximizes rewards, note this can be different form the actual action which if carried out with perfect compliance would do so) and we compensate subjects for the extenrality their signal imposes; since truthful reports cannot by definitiion lower the expected value of the optimal action relative to having chosen the action without using the extra signal, these are strictly positive when all reports are truthful. 
 
 Our use of received payoff instead of expected payoff avoids the use of counterfactual that use the signal reported by the agent itself, which enables the mechanisms to be turthful in equilibrium.
 % This seems problematic. For example, if noncompliance leads to lower reward (which is presumably to be expected if experts know more than subject) then experts' payouts is reduced due to a subject's capriciousness.
@@ -112,7 +136,7 @@ All agents know a common prior that gives a proper prior probability distributio
 
 %$\hat{S}_{-i} = \bigcup \hat{s}_j  \forall j \neq i \in N $ then the expected reward given the others reports is:
 
-For each expert $i$, compute the optimal action to choose without using that experts report (i.e. marginalizing over the prior on signal $i$ signal), denote this action $\hat{c}_{-i}$ and it's expected reward: $E[\hat{r}_{-i}] = E[ r| \hat{c}_{-i}, \hat{S}_{-i}] $
+For each expert $i$, compute the optimal action to choose without using that experts report (i.e. marginalizing over the prior on signal $i$ signal), denote this action $\hat{c}_{-i}$ and it's expected reward: $\expec[\hat{r}_{-i}] = \expec[ r| \hat{c}_{-i}, \hat{S}_{-i}] $
 
 
 The payment rule is announced as follows:
@@ -120,7 +144,7 @@ The payment rule is announced as follows:
 \[
     \pi_i = 
 \begin{cases}
-    r - E[\hat{r}_{-i}] ,& \text{if } \hat{c}_{-i} \neq c\\
+    r - \expec[\hat{r}_{-i}] ,& \text{if } \hat{c}_{-i} \neq c\\
     0,              & \text{otherwise}
 \end{cases}
 \]
@@ -133,7 +157,7 @@ Each expert reports their signal, the mechanism calculates the action that maxim
 
 
 Conditional on the action taken the payments do not depend on the reported signal of agent $i$. That is $i$ only affects their received payments with their report via the choice of action. 
-Note, if you take out the if and reward players no matter what, all you do is increase the variance but dont change the expectation, since if the action is unchanged and under the assumption the prior is correct, it's expected reward must be zero as $E[\hat{r}_{-i}] = E[r|P,c]$. The  mechanism and its properties still hold under risk neutral expert,  this is because the expected reward when using all signals and when using only the other agents signals has to be the smae if the same action is being taken. 
+Note, if you take out the if and reward players no matter what, all you do is increase the variance but dont change the expectation, since if the action is unchanged and under the assumption the prior is correct, it's expected reward must be zero as $\expec[\hat{r}_{-i}] = \expec[r|P,c]$. The  mechanism and its properties still hold under risk neutral expert,  this is because the expected reward when using all signals and when using only the other agents signals has to be the smae if the same action is being taken. 
 
 
 \begin{lem}\label{lem:affect}
@@ -141,7 +165,7 @@ Note, if you take out the if and reward players no matter what, all you do is in
 \end{lem}
 
 \begin{proof}
-There are two terms in the expression for the payment rule $\pi_i$: the received reward $r$ and expected reward $E[\hat{r}_{-i}]$ given the counterfactual that expert $i$ is ignored. 
+There are two terms in the expression for the payment rule $\pi_i$: the received reward $r$ and expected reward $\expec[\hat{r}_{-i}]$ given the counterfactual that expert $i$ is ignored. 
 The first term is the reward received after executing the chosen action, and therefore clearly only depends on the chosen action. 
 The second term is explicitly constructed so as not to use the report by expert $i$. 
 \end{proof}
@@ -149,12 +173,15 @@ The second term is explicitly constructed so as not to use the report by expert 
 
 %TODO: be more precise about what we mean by same signal
 \begin{lem}[redundant experts]
-	When two or more experts report the same signal, they all get payoff zero. 
+	When two or more experts report the same signal, in equilibrim they all get payoff zero. 
 \end{lem}
 
 \begin{proof}
-	Given the other experts reports, it is not possible for the same signal
+	Given the other experts reports, it is not possible for the same signal to cause different actions, so we always end up in the 0 payment case.
 \end{proof}
+
+
+
 
 \begin{lem}
 	Useless experts cannot profit from participation
@@ -173,16 +200,19 @@ This is inmidiate from how the payment rule and useless experts are defined, sin
 \end{thm}
 
 There is an equilibrium where all experts maximize their payment by maximizing the probability that the action with the highest reward is taken; if all other reports are truthful, and under a no-defiers assumption, then this is optimized by being truthful.
+%TODO: no defiers?!?!?!
+
 
 \begin{proof}
 For a given expert $i$, let all other experts truthfully report their signals. By Lemma~\ref{lem:affect}, the only effect an expert has on their payment is via their effect on the chosen action $c$. Given all other experts are truthful, it follows by the definition of Mechanism~\ref{mech:vcg-style} that if expert $i$ is also truthful then the mechanism will select the $c$ that maximizes the expected $r$, thus maximizing the expert $i$'s reward. Truthfulness is therefore a Bayesian Nash equilibrium.
 \end{proof}
 
-\section{Scaling Payments and Rational Entry}
 
+\section{Scaling Payments and Rational Entry}
 
 The mechanism is however potentially negative expetation if subjects are to compensate the experts via the mechansim.  That is the payments can be more than the improvement in the reward the mechanism creates. For example in Example~\ref{eg:comp-ex} the payments are double the payments. In these situations it is not rational for the subject to enter the mechanism.
 
+%EXPLAIN that VCG mechanism gets an extra degree of freedom, define alpha first
 
 As presented the VCG style direct mechanism can have higher payments than the benefits it provides in terms of higher rewards (if there are states of the world with sufficiently high reward differentials and a sufficiently large number of experts with complementary signals). Hence, the subject might be better off not participating \emph{a priori}. Here we introduce a variation on the mechanism that re-scales payments using the prior so a subject \emph{a priori} wishes to participate in the mechanism. The mechanism takes advantage of two observations. Firstly, one can set $\alpha$ prior to receiving signals from experts based on the prior. Secondly, by Lemma~\ref{lem:affect} experts do not care about the chosen action beyond how it affects their payments. 
 
@@ -192,10 +222,10 @@ The second observation does not hold in standard VCG mechanisms: if they cared a
 This is exactly the externality of player  i}
 
 In the model we have presented a expert pays no cost when aquiring their signals, and so in the single agent case the payment made by the subject for signals can in principle be arbitrarily close to zero while still incentivising truthful reports (for example the share of the reward mechanisms achieves this). We now study when payments rules can be scaled to create ex-ante in expectation arbitrarily small expected payments to the experts. As usual, we assume risk neutral experts. 
+% loosing garrett here, dont make the thing point to the proof.
 
 
-
-Let $E[r|c(s)]$ denote the expected reward obtained from choosing the optimal action using all signals if they where reported truthfully, and $E[r|c(P)] $ the expected reward from picking the action using only the prior and no signals. Thus $E[r|c(S)] - E[r|c(P)] $ is the expected surplus from using the information in the truthful equilibrium of the mechanism relative to using only the priors. For an efficient mechanism to be rational \emph{a priori} for the subject to implement, it must be that $E[r|c(S)] - E[r|c(P)] > E[\sum \pi]$ where $\pi$ is either the result of a Nash equilibrium or a dominant strategy (i.e. we set all elements of $\hat{s}$ jointly to maximize $\sum \pi$, even if this does not a equilirium for the experts).
+Let $\expec[r|c(s)]$ denote the expected reward obtained from choosing the optimal action using all signals if they where reported truthfully, and $\expec[r|c(P)] $ the expected reward from picking the action using only the prior and no signals. Thus $\expec[r|c(S)] - \expec[r|c(P)] $ is the expected surplus from using the information in the truthful equilibrium of the mechanism relative to using only the priors. For an efficient mechanism to be rational \emph{a priori} for the subject to implement, it must be that $\expec[r|c(S)] - \expec[r|c(P)] > \expec[\sum \pi]$ where $\pi$ is either the result of a Nash equilibrium or a dominant strategy (i.e. we set all elements of $\hat{s}$ jointly to maximize $\sum \pi$, even if this does not a equilirium for the experts).
 
 Note that a constant afine transformation of the rewards preserves the incentives. Denote by $\alpha$ that scales the payment.
 
@@ -204,9 +234,9 @@ Set
 \[
   \rho_i  := \alpha \pi_i
 \]
-The rescaling parameter $\alpha>0$ is chosen \emph{a priori} based on $P$ such that: $ E[\sum \rho_i] < E[r|c(s,P)] - E[r|c(P)] $. This can be achieved by setting an alpha such that
+The rescaling parameter $\alpha>0$ is chosen \emph{a priori} based on $P$ such that: $ \expec[\sum \rho_i] < \expec[r|c(s,P)] - \expec[r|c(P)] $. This can be achieved by setting an alpha such that
 
- $\alpha >   \frac{E[r|c(s,P)] - E[r|c(P)] )}{\sum E[\pi_i|P] }  $. 
+ $\alpha >   \frac{\expec[r|c(s,P)] - \expec[r|c(P)] )}{\sum \expec[\pi_i|P] }  $. 
 
 \end{mech}
 
@@ -214,7 +244,7 @@ The rescaling parameter $\alpha>0$ is chosen \emph{a priori} based on $P$ such t
 %\NDP{Initiall I tried instead of just a multiplier $< 1$, having a gneeral function $g$ with $g(0) = 0$, and $g$ is monotonically increasing in $p_i$. But this doesnt work if you lower the negatives more than the positive for example you fuck up the payments. Do we prove the scaling has to be a multiplicative, an aditive breaks it (if positive cnat help with budget and if negative can cause it to be irational for experts to enter if expected value of expert is bellow, while non linear transformation instead of linear multipler doesnt preserve the expectations and tus can also break the incentives of the experts to be truthful)}
 
 \begin{lem}
-	The rescaling of the mechanism preserves the incentives of experts
+	The rescaling of the mechanism preserves the incentives of experts.
 \end{lem}
 
 \begin{proof}
@@ -227,7 +257,7 @@ The rescaling parameter $\alpha>0$ is chosen \emph{a priori} based on $P$ such t
 \end{lem}
 
 \begin{proof}
-  By construction $\alpha$ is chosen so that $E[\sum \rho_i] < E[r|c(s,P)] - E[r|c(P)]$
+  By construction $\alpha$ is chosen so that $\expec[\sum \rho_i] < \expec[r|c(s,P)] - \expec[r|c(P)]$
 \end{proof}
 
 
@@ -239,6 +269,8 @@ The rescaling parameter $\alpha>0$ is chosen \emph{a priori} based on $P$ such t
 Since a truthful signal cannot lower (if all other signals are being reported truthfully) the expected reward of the optimal chosen action and the transformation of the payoff is linear, and the expert always has the option of reporting their true signal, the expected return in the revealing BNE of entering is weakly positive.
 \NDP{Do it in algebra?}
 \end{proof}
+
+
 
 
 \begin{thm}
@@ -260,16 +292,19 @@ inmidiate from the two previous lemmas, since the subject and experts are all th
 
 The incentive compatibility in the previous section is only a bayes nash equilibrium, and not a dominant strategies. In particular, if another expert does not report their signal truthfully, an expert might maximize the reward by making a countervailing report that is not truthful, to cancel out the other untruthful expert. 
 
-\begin{eg}[mechanism is not dominant-strategy incentive compatible]
-	Consider a setting with a reward maximizing subject with probability 1, two possible actions, where two experts know with certainty that the rewards are $1,2$ and one of them reports $1,0$. A truthful report would lead to choosing the first action (the average of the two reports) with rewards of $1$ while a report of $0,2$ would cause the max to select the seccond action and obtain a reward of $2$.
-\end{eg}
 
+%start using subject without introducing it,  
+%why are we doing this? motivate
+% make sure you get 
+\begin{eg}[mechanism is not dominant-strategy incentive compatible]
+	Consider a setting with a reward maximizing subject with probability 1, two possible actions ${A,B}$, where two experts know with certainty that the rewards are $1,2$ and one of them reports $1,0$. A truthful report would lead to choosing action $A$ (the average of the two reports) with rewards of $1$ while a report of $0,2$ would cause the max to selec action $B$ and obtain a reward of $2$.
+\end{eg}
 
 \subsection{A sufficient condition for dominat truthfulness of an expert in efficient mechanisms}
 
 In general the efficient\footnote{Mechanisms that are not efficient are trivial to make weakly dominant strategy truthful. For example disrewarding reports always picking an arbitrary action} mechanism is not dominant strategy incentive compatible, since (for example) a expert agent who inverts their reporrts would make the other experts also misreport try to compensate if possible, as seen in the example above.
 
-Consider a experts \emph{unilateral value}, the expected value of pickign the optimal action conditional only on their signal, which we denote by  $E[ r| c_{i}]$. A \emph{unilaterally sufficient expert} is one where $E[r|c_{i}] \geq E[r|c_{s_i \cup s_{-i}}] \forall s_{-i}$, that is the experts signal pins down a choice of action that obtains expected optimal rewards irrespective of any other possible signal received by the other experts.
+Consider a experts \emph{unilateral value}, the expected value of pickign the optimal action conditional only on their signal, which we denote by  $\expec[ r| c_{i}]$. A \emph{unilaterally sufficient expert} is one where $\expec[r|c_{i}] \geq \expec[r|c_{s_i \cup s_{-i}}] \forall s_{-i}$, that is the experts signal pins down a choice of action that obtains expected optimal rewards irrespective of any other possible signal received by the other experts.
 
 \begin{lem}
 	A unilaterally sufficient expert has truthfulness as a dominant strategy in an efficient mechanism with shared rewards.
@@ -288,6 +323,7 @@ Consider a experts \emph{unilateral value}, the expected value of pickign the op
 \end{proof}
 
 
+%this is the reduant exper again.
 \begin{lem}
 	In the presense of at least two unilaterally sufficient experts our vcg-style mechanism makes payments 0 in expectation in the full revelation BNE. 
 \end{lem}
@@ -297,39 +333,17 @@ Consider a experts \emph{unilateral value}, the expected value of pickign the op
 \end{proof}
 
 
+% a unilaterllay sufficient expert is necesary nto just sufficient.
 
 
 
 
-\subsection{Noncompliance and Incentive Compatibility}
-
-A natural question that arrises is how to handle the case where the action that is optimal given the reports (the chosen action under perfect compliance) is not the actual action taken by the subject. The three natural strategies from bandits with compliance awareness have their counterparts. Three natural strategies are:
-
-\begin{itemize}
-\item make payments irrespective. 
-\item make the payment for the $\alpha r_a$ but do not require the payment of $b_{i-1}$.
-\item make no payment, and require no payment.
-\end{itemize}
-
-Only the first is incentive compatible. TODO: formalize. Sketch: a crucial property is that w separate bids and reports, this lets the reports be truthful while the bids are shaded (as is standard in common value seccond price auction). Further, it means that noncompliance (given the no defiers assumption) 
-\DBA{maybe I'm missing something. But if the subject has a strong tendency to pick low-reward actions, then the experts are disincentivized from providing any advice at all, since they will likely receive negative payouts}
-\NDP{The prior is over the noncompliance (what you are terming it the tendency to pick low actions here) }
 
 
-If we do not require the payment, it can incentivize experts to report in such a way as to encourage non-compliance, since this would increase their payout. \DBA{example}
+% allways takers and defiers, 
 
 
-If we void the payment completely this can have the oposite effect, biasing experts away from reporting the \DBA{Is this paragraph dependent on agent's having a model of the subject's noncompliance? E.g. If subject's noncompliance is random (ignore advice with probability $p$ and then pick action uniformly), are the second and third options incentive compatible?}
-
-
-for a cancer example; the chemiotherapy specialist might explain the likely side effects conditional on their knowledge of the specifics of the patient (the rapidly dropping cost of sequencing a genome means this) without needing to understand the relative value the patient places on discomfort relative to life lengthening, while the surgeon might explain the (again subject tot he specific characteristics of the subject) risks he foresees in the surgury (in contrast to the baseline risks of the populatin that gets the procude which is what cna be observed, a reasoable prior) for that patient, without needing to udnerstand the risk aversion of the patient which would be necesary for calculating their utility.
-
-the subject (oracle style) can then be queried for their chosen action and expected utility for different subsets of the signals (for every expert we need to query what the action (and the expected payoff) would be without that experts signal having been reported)
-
-contrast the information structure in the cancer example and its non separability 
-
-
-\section{A bidding mechanism }
+\section{A bidding mechanism}
 
 In many practical applications of interest, direct signal mechanisms might be impractical. It might be that the signals can't be practically reported: for example, because while the expert knows something when they see it, they do not have a vocabulary to unambigously express it. The experts may disagree about the prior probabilities and thus the signals can't be unambigously aggregated, or the mechanism doesn't have access to the prior.
 
@@ -446,7 +460,7 @@ This condition can be somewhat relaxed,  since the needed property it implies is
 %at the cost of a loss of interpretation of the prices in the bidding mechanism,
 
 \[
-E[ ^{*}|c_i]  \geq E[ r^{*}|c_j] \text{ if }E[ ^{*}|a_i]  \geq E[ r^{*}|a_j]  \forall j \neq i \in K
+\expec[ ^{*}|c_i]  \geq \expec[ r^{*}|c_j] \text{ if }\expec[ ^{*}|a_i]  \geq \expec[ r^{*}|a_j]  \forall j \neq i \in K
 \]
 
 %TODO
@@ -456,4 +470,35 @@ E[ ^{*}|c_i]  \geq E[ r^{*}|c_j] \text{ if }E[ ^{*}|a_i]  \geq E[ r^{*}|a_j]  \f
 \subsection{Interpreting bids \& Recomending their Wishes}
 
 So far we have treated one space of actions $A$ for both $c$ and $a$. We now note that it may be advantageous for the mechanism to have elements in $A$ that are not available in $a$. In particular a \emph{as you wish} choice $c$ byt he algorithm, when the expert believes that hecannot add value relative to the private information of the subject. While in the signal case with common priors the signal report of the subject can be added initially (and used as part of the prior that sets the benchmark reward that is discounted from the realized reward in setting payments), there is no natural way to do this in the more realitic setting whre the subject and experts do not share a prior.   
+
+
+
+\section{Noncompliance and Incentive Compatibility}
+
+A natural question that arrises is how to handle the case where the action that is optimal given the reports (the chosen action under perfect compliance) is not the actual action taken by the subject. The three natural strategies from bandits with compliance awareness have their counterparts. Three natural strategies are:
+
+\begin{itemize}
+\item make payments irrespective. 
+\item make the payment for the $\alpha r_a$ but do not require the payment of $b_{i-1}$.
+\item make no payment, and require no payment.
+\end{itemize}
+
+Only the first is incentive compatible. TODO: formalize. Sketch: a crucial property is that w separate bids and reports, this lets the reports be truthful while the bids are shaded (as is standard in common value seccond price auction). Further, it means that noncompliance (given the no defiers assumption) 
+\DBA{maybe I'm missing something. But if the subject has a strong tendency to pick low-reward actions, then the experts are disincentivized from providing any advice at all, since they will likely receive negative payouts}
+\NDP{The prior is over the noncompliance (what you are terming it the tendency to pick low actions here) }
+
+
+If we do not require the payment, it can incentivize experts to report in such a way as to encourage non-compliance, since this would increase their payout. \DBA{example}
+
+
+If we void the payment completely this can have the oposite effect, biasing experts away from reporting the \DBA{Is this paragraph dependent on agent's having a model of the subject's noncompliance? E.g. If subject's noncompliance is random (ignore advice with probability $p$ and then pick action uniformly), are the second and third options incentive compatible?}
+\NDP{yes it is}
+
+
+for a cancer example; the chemiotherapy specialist might explain the likely side effects conditional on their knowledge of the specifics of the patient (the rapidly dropping cost of sequencing a genome means this) without needing to understand the relative value the patient places on discomfort relative to life lengthening, while the surgeon might explain the (again subject tot he specific characteristics of the subject) risks he foresees in the surgury (in contrast to the baseline risks of the populatin that gets the procude which is what cna be observed, a reasoable prior) for that patient, without needing to udnerstand the risk aversion of the patient which would be necesary for calculating their utility.
+
+the subject (oracle style) can then be queried for their chosen action and expected utility for different subsets of the signals (for every expert we need to query what the action (and the expected payoff) would be without that experts signal having been reported)
+
+contrast the information structure in the cancer example and its non separability 
+
 
