--- a/twosides.tex
+++ b/twosides.tex
@@ -67,7 +67,7 @@ where
 \[
     \pi_{i,t} =
 \begin{cases}
-    r - E[\hat{r}_{t,-i}] ,& \text{if } \hat{c}_{t,-i} \neq c_t\\
+    r - \expec[\hat{r}_{t,-i}] ,& \text{if } \hat{c}_{t,-i} \neq c_t\\
     0,              & \text{otherwise}
 \end{cases}
 \]
@@ -187,13 +187,13 @@ We then evalute algorithms that do not use a given agents signal and plug those 
 
 %$\hat{S}_{-i} = \bigcup \hat{s}_j  \forall j \neq i \in N $ then the expected reward given the others reports is:
 
-After the end of the last time period, for each expert $i$, estimate the loss that would be obtained by our algorithm A without using that experts report in it's context. Since this is unbiased we can plug it in place of the seccon term $E[\sum_1^T \hat{r}_{-i,t}]$ in the payments.
+After the end of the last time period, for each expert $i$, estimate the loss that would be obtained by our algorithm A without using that experts report in it's context. Since this is unbiased we can plug it in place of the seccon term $\expec[\sum_1^T \hat{r}_{-i,t}]$ in the payments.
 
 
 Thus payment rule is announced as follows:
 
 \[
-    \pi_i =  \alpha \sum_1^T r_t -  E[\sum_1^T \hat{r}_{-i,t}]
+    \pi_i =  \alpha \sum_1^T r_t -  \expec[\sum_1^T \hat{r}_{-i,t}]
 \]
 
 Where alpha is again set a priori. Given we are attempting not to use the prior, using some $\alpha < 1/N$ might be the best we can do.
@@ -201,7 +201,7 @@ Where alpha is again set a priori. Given we are attempting not to use the prior,
 \end{mech}
 
 
-Note when a agent $i$ doesnt change the exploration policy (in expectation) then , $ E[r_t] - E[\hat{r}_{-i,t}] =0  $. 
+Note when a agent $i$ doesnt change the exploration policy (in expectation) then , $ \expec[r_t] - \expec[\hat{r}_{-i,t}] =0  $. 
 
 While a truthful report is not guaranteed to be strictly truthful, the bound on the bias of the plugin payent does bound how much a deviation can benefit  and this goes to zero. More practically, it appears imposible for a uninformed agent to obtain profits, and it seems very hard for a informed agent to find a strategy other than truthfulness that has higher expected reward.
 
@@ -261,7 +261,7 @@ This mechanism is the composition of the bid mechanism and signal mechanism.
 
 The payment rule is announced. In each period: all agents report signals and bids to the mechanism, the mechanism displays the other experts signals to the winner of the bidding, the winner selects the chosen action $c_t$, this is displayed to the subject, who takes action $a_t$ and receives reward $r_t$.
 
-After the end of the last time period, for each expert $i$, estimate the loss that would be obtained by a no regret algorithm without using that experts report in it's context, and use this as $E[\sum_1^T \hat{r}_{-i,t}]$ in the payments. The choice part of the payments is identical to the bidding.
+After the end of the last time period, for each expert $i$, estimate the loss that would be obtained by a no regret algorithm without using that experts report in it's context, and use this as $\expec[\sum_1^T \hat{r}_{-i,t}]$ in the payments. The choice part of the payments is identical to the bidding.
 
 
 Thus payment rule thus is:
@@ -277,11 +277,10 @@ Thus payment rule thus is:
 \sum_1^T
 \begin{cases}
      - b_{\hat{2},t} ,& \text{if } o_{i,t} = 0 \land o_{i,t+1} = 1\\
-      b_{\hat{2},t} ,& \text{if } o_{i,t}= 1 \land o_{i,t+1} = 0 \\
-		0,              & \text{otherwise}
+       b_{\hat{2},t} ,& \text{if } o_{i,t} = 1 \land o_{i,t+1} = 0 \\
+	   0,              & \text{otherwise}
 \end{cases}
-
-  +  \eta \sum_1^T r_t -  E[\sum_1^T \hat{r}_{-i,t}]
+  +  \eta \sum_1^T r_t -  \expec[\sum_1^T \hat{r}_{-i,t}]
 \]
 
  
@@ -297,3 +296,9 @@ Where $\zeta$ and $\eta$ are again set a priori. Given we are attempting not to 
 
 
  A major concern is that a expert would not reveal their signal turthfully and loose out on that part of the reward, if they can benefit more from being the \emph{owner} and by widtholding their signal they can supress bids of othe experts, this is a particular conceern since the other experts may be able to achieve higher rewards.  
+
+
+
+ concerns;
+
+ the experts knwo the estimator you are using, can outbid you and then make the chocies so you realized bias is high. solution 
